syntax = "proto3";

package platform.infrastructure;

option go_package="github.com/trmnl-core/services/platform/infrastructure";

service Infrastructure {
  rpc Summary (SummaryRequest) returns (SummaryResponse) {};
  rpc Check (CheckRequest) returns (CheckResponse) {};
}

message SummaryRequest {}

message SummaryResponse {
  int32 clusters = 1;
  int32 load_balancers = 2;
  int32 servers = 3;
  int32 volumes = 4;
}

message CheckRequest {}

message CheckResponse {
  repeated string issues = 1;
}